# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tocgen"
version = "1.0.0"
description = "generates table of content for my freeCodeCamp handbook in markdown format"
readme = "README.md"
authors = [{ name = "Farhan Hasin Chowdhury", email = "shovik.is.here@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3",
]
keywords = ["markdown", "freecodecamp"]
dependencies = [
    "beautifulsoup4==4.11.1",
    "requests==2.28.1"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/fhsinchy/tocgen"

[project.scripts]
tocgen = "tocgen:main"